# mcp-server-weather-py

./: .dockerignore  .env.example  .pre-commit-config.yaml  CLAUDE.md  DOCKER_MCP_GUIDE.md  Dockerfile  LABELS_SETUP.md  LICENSE  MCP_SETUP.md  MYPY_REPORT.md  README.md  REQUIREMENTS_GENERATION.md  WIKI_SETUP.md  docker-compose.mcp.yml  docker-compose.yml  docker-entrypoint.sh  example_metrics.json  example_state_machine.py  examples.py  main.py  monitoring.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run_modular.py  setup_script.py  weather.py
.github/: labeler.yml
.github/workflows/: labeler.yml  pr-tests.yml  setup-labels.yml  update-requirements.yml
docs/: README_ENHANCED.md  README_MODULAR.md
legacy/: test_env_coverage.py  test_weather.py  weather.py  weather_improved.py
src/: __init__.py  client.py  config.py  formatters.py  main.py  tools.py  validators.py
src/modular/: __init__.py  client.py  exceptions.py  formatters.py  models.py  tools.py  validators.py  weather_modular.py
tests/: test_client.py  test_config.py  test_exceptions.py  test_formatters.py  test_models.py  test_tools.py  test_validators.py  test_weather.py
tests/modular/: test_env_modular.py  test_modular.py
wiki-templates/: API-Reference.md  Home.md  Installation-Guide.md  README.md
